// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template-template should be able to compile a template 1`] = `
"Hi Mr. Anderson,

We regret having to break this bad news to you, but your cat died.

Signed Your Eternal Friends at MegaCorp,
Agent Smith"
`;

exports[`template-template should be able to compile a template, in immediate mode 1`] = `
"Hi Mr. Anderson,

We regret having to break this bad news to you, but your cat died.

Signed Your Eternal Friends at MegaCorp,
Agent Smith"
`;

exports[`template-template should handle logic of good news 1`] = `
"Hi Mr. Anderson,

We are delighted to inform you that you won the lottery.

Signed Your Eternal Friends at MegaCorp,
Agent Smith"
`;
